--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "vite": "^5.4.10"
+  },
+  "dependencies": {
     "vite": "^5.4.10"
   }
 }
