--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "prebuild" : "chmod +x node_modules/.bin/vite",
     "build": "vite build",
     "preview": "vite preview"
   },
